Finish fixes for build and target files

--- a/FPGame.uproject
+++ b/FPGame.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{5CB12A8A-470C-B277-DF0C-359300531201}",
+	"EngineAssociation": "4.24",
 	"Category": "",
 	"Description": "",
 	"Modules": [
