--- a/Plugins/Minimap/Minimap.uplugin
+++ b/Plugins/Minimap/Minimap.uplugin
@@ -17,7 +17,7 @@
 	"Modules": [
 		{
 			"Name": "Minimap",
-			"Type": "Developer",
+			"Type": "DeveloperTool",
 			"LoadingPhase": "PreDefault"
 		}
 	]
